# twch

./: README.md  pyproject.toml
src/twitchdata_backend/: dumdump.py
src/twitchdata_frontend/: slep.py
src/twitchdata_redis/: __init__.py  redis_cm.py
tests/: mentions_test.py
